--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
   <script>
   var screens = [{
     name: "start",
-    contents: `<h2 style="top:10rem; left: 8rem">Das Mattimon-Battle</h2>
+    contents: `<h2 style="top:10rem; left: 12rem">#MissionBattle</h2>
       <button name="start" style="top:12rem; left: 19rem">Battle starten</button>
       <button name="loadscene" style="top:16rem; left: 2rem" scene="info">Regeln & Klassen</button>`
   },{
     name: "info",
-    contents: `<h2 style="top:10rem; left: 8rem">Das Mattimon-Battle</h2>
-      <p></p>
-      <button name="loadscene" style="top:16rem; left: 2rem" scene="start">Zurück</button>`
+    contents: `<h3 style="top:0px; left: 1rem; margin:0;">#MissionBattle</h3>
+      <button name="loadscene" style="top:.5rem; left: 1rem;" class="small" scene="start">Zurück</button>
+      <p style="left: 3rem">Wow, das sind die regeln (bis jetzt):<br>
+        Meine Idee war, dass Matti gegen die Community irgendwelche einfach(en) (zu programmierbaren) Minigames spielt. Insgesamt gibt es 64 mitspieler und es werden jede Runde die Hälfte eliminiert. Was sagst du dazu?
+      </p>`
   }]
   </script>
   <script>
@@ -31,7 +33,7 @@
     return new Promise(resolve => setTimeout(resolve, milliseconds))
   }
   $(window).on("load", async () => {
-    await sleep(2000)
+    //await sleep(2000)
     $("main").html(screens.find(s => s.name == "start").contents)
   })
   $('main').on("click", '[name="loadscene"]', (e) => {
