--- a/screentest.html
+++ b/screentest.html
@@ -10,9 +10,11 @@
 
 <body>
   <main>
-    <h2 style="top:10rem; left: 8rem">Das Mattimon-Battle</h2>
-      <p></p>
-      <button name="loadscene" style="top:16rem; left: 2rem" scene="start">Zurück</button>
+    <h3 style="top:0px; left: 1rem; margin:0;">#MissionBattle</h3>
+      <button name="loadscene" style="top:.5rem; left: 1rem;" class="small" scene="start">Zurück</button>
+      <p style="left: 3rem">Wow, das sind die regeln (bis jetzt):<br>
+        Meine Idee war, dass Matti gegen die Community irgendwelche einfach(en) (zu programmierbaren) Minigames spielt. Insgesamt gibt es 64 mitspieler und es werden jede Runde die Hälfte eliminiert. Was sagst du dazu? 
+      </p>
   </main>
   <div style="border-left: 2px solid green; height: 100vh; left: 50vw; top: 0px; position: fixed;"></div>
   <div style="border-bottom: 2px solid green; height: 1px; width: 100vw; left: 0px; top: 50vh; position:fixed;"></div>
