--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     name: "start",
     contents: `<h2 style="top:10rem; left: 12rem">#MissionBattle</h2>
       <button name="start" style="top:12rem; left: 19rem">Battle starten</button>
-      <button name="loadscene" style="top:16rem; left: 2rem" scene="info">Regeln & Klassen</button>`
+      <button name="loadscene" style="top:16rem; left: 2rem" scene="info">Regeln & Klassen</button>
+      <h3 style="top:-15rem; left: 0" class="lsd">Jetzt neu - LSD-Modus!</h3>`
   },{
     name: "info",
     contents: `<h3 style="top:0px; left: 1rem; margin:0;">#MissionBattle</h3>
